--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								<h3 class="hello">Hello, my name is <span class="name">Ayrene Santos</span></h3>
 								<h3 class="my-profession">I' m a <span class="typing">Web Developer</span></h3>
 								<p>With a passion for crafting stunning and user-friendly digital experiences. I'm always eager to learn and grow, bringing my creative flair and technical skills to every project. Let's make magic happen!</p>
-								<a href="#" class="btn">Download CV</a>
+								<a href="AYRENE-SANTOS.pdf" class="btn">Download CV</a>
 							</div>
 							<div class="home-img padd-15">
 								<img src="images/hero.jpg" alt="" />
@@ -353,7 +353,7 @@
 						</div>
 						<div class="row">
 							<div class="portfolio-heading padd-15">
-								<h2>My Projects :</h2>
+								<h2>My Other Projects :</h2>
 							</div>
 						</div>
 						<div class="row">
@@ -361,7 +361,8 @@
 							<div class="portfolio-item padd-15">
 								<div class="portfolio-item-inner shadow-dark">
 									<div class="portfolio-img">
-										<img src="images/portfolio/portfolio-1.jpg" alt="" />
+										<img src="images/projects/Project1.png" alt="Chat-app" />
+										<p><span>Chat App</span> - HTML, CSS, JS, Node JS, Socket.io</p>
 									</div>
 								</div>
 							</div>
@@ -370,7 +371,8 @@
 							<div class="portfolio-item padd-15">
 								<div class="portfolio-item-inner shadow-dark">
 									<div class="portfolio-img">
-										<img src="images/portfolio/portfolio-2.jpg" alt="" />
+										<img src="images/projects/Project2.png" alt="forkify-app" />
+										<p><span>Recipe App (Forkify)</span> - HTML, SASS, Parcel JS</p>
 									</div>
 								</div>
 							</div>
@@ -379,7 +381,8 @@
 							<div class="portfolio-item padd-15">
 								<div class="portfolio-item-inner shadow-dark">
 									<div class="portfolio-img">
-										<img src="images/portfolio/portfolio-3.jpg" alt="" />
+										<img src="images/projects/Project3.png" alt="expense-app" />
+										<p><span>Expense Tracker App</span> - CSS, React JS</p>
 									</div>
 								</div>
 							</div>
@@ -388,7 +391,8 @@
 							<div class="portfolio-item padd-15">
 								<div class="portfolio-item-inner shadow-dark">
 									<div class="portfolio-img">
-										<img src="images/portfolio/portfolio-4.jpg" alt="" />
+										<img src="images/projects/Project4.png" alt="bank-app" />
+										<p><span>Bank App</span> - HTML, CSS, JavaScript</p>
 									</div>
 								</div>
 							</div>
@@ -397,7 +401,8 @@
 							<div class="portfolio-item padd-15">
 								<div class="portfolio-item-inner shadow-dark">
 									<div class="portfolio-img">
-										<img src="images/portfolio/portfolio-5.jpg" alt="" />
+										<img src="images/projects/Project5.png" alt="dice-game" />
+										<p><span>Dice Game</span> - HTML, CSS, JavaScript</p>
 									</div>
 								</div>
 							</div>
@@ -406,7 +411,8 @@
 							<div class="portfolio-item padd-15">
 								<div class="portfolio-item-inner shadow-dark">
 									<div class="portfolio-img">
-										<img src="images/portfolio/portfolio-6.jpg" alt="" />
+										<img src="images/projects/Project6.png" alt="" />
+										<p><span>Guess My Number</span> - HTML, CSS, JavaScript</p>
 									</div>
 								</div>
 							</div>
@@ -459,39 +465,39 @@
 						<h4 class="contact-sub-title padd-15">I'M VERY RESPOSIVE TO MESSAGES</h4>
 						<!-- ====== Contact Form ====== -->
 						<div class="row">
-							<div class="contact-form padd-15">
+							<form class="contact-form padd-15" action="https://formsubmit.co/aa985a5d7707a27b7f934ddb36c9ec5e" method="POST">
 								<div class="row">
 									<div class="form-item col-6 padd-15">
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Name" />
+											<input type="text" id="name" class="form-control" placeholder="Name" autocomplete="off" />
 										</div>
 									</div>
 									<div class="form-item col-6 padd-15">
 										<div class="form-group">
-											<input type="email" class="form-control" placeholder="Email" />
+											<input type="email" id="email" class="form-control" placeholder="Email" autocomplete="off" />
 										</div>
 									</div>
 								</div>
 								<div class="row">
 									<div class="form-item col-12 padd-15">
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Subject" />
+											<input type="text" id="subject" class="form-control" placeholder="Subject" autocomplete="off" />
 										</div>
 									</div>
 								</div>
 								<div class="row">
 									<div class="form-item col-12 padd-15">
 										<div class="form-group">
-											<textarea name="" class="form-control" id="" placeholder="Message"></textarea>
+											<textarea name="" class="form-control" id="message" placeholder="Message" autocomplete="off"></textarea>
 										</div>
 									</div>
 								</div>
 								<div class="row">
 									<div class="form-item col-12 padd-15">
-										<button type="submit" class="btn">Send Message</button>
+										<button type="submit" class="btn sendMessageBtn">Send Message</button>
 									</div>
 								</div>
-							</div>
+							</form>
 						</div>
 					</div>
 				</section>
