--- a/index.html
+++ b/index.html
@@ -469,26 +469,26 @@
 								<div class="row">
 									<div class="form-item col-6 padd-15">
 										<div class="form-group">
-											<input type="text" id="name" class="form-control" placeholder="Name" autocomplete="off" />
+											<input type="text" name="name" id="name" class="form-control" placeholder="Name" autocomplete="off" />
 										</div>
 									</div>
 									<div class="form-item col-6 padd-15">
 										<div class="form-group">
-											<input type="email" id="email" class="form-control" placeholder="Email" autocomplete="off" />
+											<input type="email" name="email" id="email" class="form-control" placeholder="Email" autocomplete="off" />
 										</div>
 									</div>
 								</div>
 								<div class="row">
 									<div class="form-item col-12 padd-15">
 										<div class="form-group">
-											<input type="text" id="subject" class="form-control" placeholder="Subject" autocomplete="off" />
+											<input type="text" name="subject" id="subject" class="form-control" placeholder="Subject" autocomplete="off" />
 										</div>
 									</div>
 								</div>
 								<div class="row">
 									<div class="form-item col-12 padd-15">
 										<div class="form-group">
-											<textarea name="" class="form-control" id="message" placeholder="Message" autocomplete="off"></textarea>
+											<textarea name="message" class="form-control" id="message" placeholder="Message" autocomplete="off"></textarea>
 										</div>
 									</div>
 								</div>
