--- a/index.html
+++ b/index.html
@@ -480,6 +480,11 @@
 								</div>
 								<div class="row">
 									<div class="form-item col-12 padd-15">
+										<!-- Honeypot -->
+										<input type="text" name="_honey" style="display: none" />
+										<!-- Disable Captcha -->
+										<input type="hidden" name="_captcha" value="false" />
+										<!-- End -->
 										<div class="form-group">
 											<input type="text" name="subject" id="subject" class="form-control" placeholder="Subject" autocomplete="off" />
 										</div>
