--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 
 				<ul class="nav">
 					<li>
-						<a href="#home" class="active"><i class="fa fa-home"></i> Home</a>
+						<a href="#home" class="active">Home<i class="fa fa-home"></i></a>
 					</li>
 					<li>
-						<a href="#about"><i class="fa fa-user"></i> About</a>
+						<a href="#about">About<i class="fa fa-user"></i></a>
 					</li>
 					<li>
-						<a href="#languages"><i class="fa fa-list"></i>Skills</a>
+						<a href="#languages">Skills<i class="fa fa-list"></i></a>
 					</li>
 					<li>
-						<a href="#portfolio"><i class="fa fa-briefcase"></i>Projects</a>
+						<a href="#portfolio">Projects<i class="fa fa-briefcase"></i></a>
 					</li>
 					<li>
-						<a href="#contact"><i class="fa fa-comments"></i>Contact</a>
+						<a href="#contact">Contact<i class="fa fa-comments"></i></a>
 					</li>
 				</ul>
 			</section>
@@ -126,7 +126,7 @@
 										</div>
 										<div class="row">
 											<div class="buttons padd-15">
-												<a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
+												<a href="https://www.linkedin.com/in/ayrene-santos-433587240/" data-section-index="1" class="btn hire-me">Let's connect</a>
 											</div>
 										</div>
 									</div>
