--- a/success.html
+++ b/success.html
@@ -11,7 +11,7 @@
 	<body>
 		<div class="messageSuccess">
 			<h1>Message Sent!</h1>
-			<p>Go back <a href="https://ayreneys.github.io/portfolio-AYS/#home">HOME</a></p>
+			<p>Go back <a href="https://ayreneys.github.io/portfolio-AYS/">HOME</a></p>
 		</div>
 	</body>
 </html>
