--- a/index.html
+++ b/index.html
@@ -98,14 +98,18 @@
 									<div class="personal-info padd-15">
 										<div class="row">
 											<div class="info-item padd-15">
-												<p>Birthday : <span>April 20 1999</span></p>
-											</div>
-											<div class="info-item padd-15">
-												<p>Age : <span>23</span></p>
+												<p>
+													Twitter : <span><a href="https://twitter.com/ayreneYS">ayreneYS</a></span>
+												</p>
 											</div>
 											<div class="info-item padd-15">
 												<p>
-													Website : <span><a href="https://www.linkedin.com/in/ayrene-santos-433587240/">www.linkedin.com/in/ayrene-santos</a></span>
+													GitHub : <span><a href="https://github.com/ayreneYS">ayreneYS</a></span>
+												</p>
+											</div>
+											<div class="info-item padd-15">
+												<p>
+													LinkedIn : <span><a href="https://www.linkedin.com/in/ayrene-santos-433587240/">Ayrene Santos</a></span>
 												</p>
 											</div>
 											<div class="info-item padd-15">
@@ -361,7 +365,8 @@
 							<div class="portfolio-item padd-15">
 								<div class="portfolio-item-inner shadow-dark">
 									<div class="portfolio-img">
-										<img src="images/projects/Project1.png" alt="Chat-app" />
+										<a href="https://github.com/ayreneYS/chat-app"><img src="images/projects/Project1.png" alt="Chat-app" /></a>
+
 										<p><span>Chat App</span> - HTML, CSS, JS, Node JS, Socket.io</p>
 									</div>
 								</div>
@@ -371,7 +376,8 @@
 							<div class="portfolio-item padd-15">
 								<div class="portfolio-item-inner shadow-dark">
 									<div class="portfolio-img">
-										<img src="images/projects/Project2.png" alt="forkify-app" />
+										<a href="https://github.com/ayreneYS/forkify-ays"><img src="images/projects/Project2.png" alt="forkify-app" /></a>
+
 										<p><span>Recipe App (Forkify)</span> - HTML, SASS, Parcel JS</p>
 									</div>
 								</div>
@@ -381,7 +387,7 @@
 							<div class="portfolio-item padd-15">
 								<div class="portfolio-item-inner shadow-dark">
 									<div class="portfolio-img">
-										<img src="images/projects/Project3.png" alt="expense-app" />
+										<a href="https://github.com/ayreneYS/react-course-proj1"><img src="images/projects/Project3.png" alt="expense-app" /></a>
 										<p><span>Expense Tracker App</span> - CSS, React JS</p>
 									</div>
 								</div>
@@ -391,7 +397,7 @@
 							<div class="portfolio-item padd-15">
 								<div class="portfolio-item-inner shadow-dark">
 									<div class="portfolio-img">
-										<img src="images/projects/Project4.png" alt="bank-app" />
+										<a href="https://github.com/ayreneYS/udemy-project-s4"><img src="images/projects/Project4.png" alt="bank-app" /></a>
 										<p><span>Bank App</span> - HTML, CSS, JavaScript</p>
 									</div>
 								</div>
@@ -401,7 +407,7 @@
 							<div class="portfolio-item padd-15">
 								<div class="portfolio-item-inner shadow-dark">
 									<div class="portfolio-img">
-										<img src="images/projects/Project5.png" alt="dice-game" />
+										<a href="https://ayreneys.github.io/udemy-project-s3/"><img src="images/projects/Project5.png" alt="dice-game" /></a>
 										<p><span>Dice Game</span> - HTML, CSS, JavaScript</p>
 									</div>
 								</div>
@@ -411,7 +417,7 @@
 							<div class="portfolio-item padd-15">
 								<div class="portfolio-item-inner shadow-dark">
 									<div class="portfolio-img">
-										<img src="images/projects/Project6.png" alt="" />
+										<a href="https://ayreneys.github.io/udemy-project-s1/"><img src="images/projects/Project6.png" alt="" /></a>
 										<p><span>Guess My Number</span> - HTML, CSS, JavaScript</p>
 									</div>
 								</div>
