--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 									<div class="portfolio-img">
 										<a href="https://github.com/ayreneYS/chat-app"><img src="images/projects/Project1.png" alt="Chat-app" /></a>
 
-										<p><span>Chat App</span> - HTML, CSS, JS, Node JS, Socket.io</p>
+										<p><span>Chat App</span> - (undeployed)</p>
 									</div>
 								</div>
 							</div>
@@ -378,7 +378,7 @@
 									<div class="portfolio-img">
 										<a href="https://github.com/ayreneYS/forkify-ays"><img src="images/projects/Project2.png" alt="forkify-app" /></a>
 
-										<p><span>Recipe App (Forkify)</span> - HTML, SASS, Parcel JS</p>
+										<p><span>Recipe App (Forkify)</span> - (undeployed)</p>
 									</div>
 								</div>
 							</div>
@@ -388,7 +388,7 @@
 								<div class="portfolio-item-inner shadow-dark">
 									<div class="portfolio-img">
 										<a href="https://github.com/ayreneYS/react-course-proj1"><img src="images/projects/Project3.png" alt="expense-app" /></a>
-										<p><span>Expense Tracker App</span> - CSS, React JS</p>
+										<p><span>Expense Tracker App</span> - (undeployed)</p>
 									</div>
 								</div>
 							</div>
@@ -398,7 +398,7 @@
 								<div class="portfolio-item-inner shadow-dark">
 									<div class="portfolio-img">
 										<a href="https://github.com/ayreneYS/udemy-project-s4"><img src="images/projects/Project4.png" alt="bank-app" /></a>
-										<p><span>Bank App</span> - HTML, CSS, JavaScript</p>
+										<p><span>Bank App</span> - (deployed)</p>
 									</div>
 								</div>
 							</div>
@@ -408,7 +408,7 @@
 								<div class="portfolio-item-inner shadow-dark">
 									<div class="portfolio-img">
 										<a href="https://ayreneys.github.io/udemy-project-s3/"><img src="images/projects/Project5.png" alt="dice-game" /></a>
-										<p><span>Dice Game</span> - HTML, CSS, JavaScript</p>
+										<p><span>Dice Game</span> - (deployed)</p>
 									</div>
 								</div>
 							</div>
@@ -418,7 +418,7 @@
 								<div class="portfolio-item-inner shadow-dark">
 									<div class="portfolio-img">
 										<a href="https://ayreneys.github.io/udemy-project-s1/"><img src="images/projects/Project6.png" alt="" /></a>
-										<p><span>Guess My Number</span> - HTML, CSS, JavaScript</p>
+										<p><span>Guess My Number</span> - (deployed)</p>
 									</div>
 								</div>
 							</div>
@@ -468,7 +468,7 @@
 							<!-- ===== Contact info item end ====== -->
 						</div>
 						<h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
-						<h4 class="contact-sub-title padd-15">I'M VERY RESPOSIVE TO MESSAGES</h4>
+						<h4 class="contact-sub-title padd-15">I IMMEDIATELY RESPONSE TO MESSAGES</h4>
 						<!-- ====== Contact Form ====== -->
 						<div class="row">
 							<form class="contact-form padd-15" action="https://formsubmit.co/aa985a5d7707a27b7f934ddb36c9ec5e" method="POST">
