--- a/index.html
+++ b/index.html
@@ -87,10 +87,12 @@
 							<div class="about-content padd-15">
 								<div class="row">
 									<div class="about-text padd-15">
-										<h3>I'm Ayrene Santos a <span>Web Developer</span></h3>
+										<h2>Hi there!</h2>
+										<h3>I'm <span class="name">Ayrene Santos</span> a <span>Web Developer</span></h3>
 										<p>
-											I am a Front-end Web Developer with a passion for creating visually stunning and user-friendly websites and applications. I am a lifelong learner and always seeking to improve my skills and advance my career. I bring a combination of technical expertise
-											and creative flair to every project I work on.
+											I'm not your average Front-end Web Developer. You see, I used to be a Business Development/Sales Associate, but I discovered my love for coding and since August 2022, I've been on a mission to turn my passion into a career. I spend my days and nights (and
+											weekends, let's be real) building beautiful and intuitive websites and applications that not only look good, but feel good to use. I'm like a mad scientist, except instead of beakers and Bunsen burners, I have a computer and a thirst for knowledge. With
+											each project, I bring my technical wizardry and my artistic vision to create something truly special. So buckle up, because with me, you're in for a wild ride!
 										</p>
 									</div>
 								</div>
@@ -206,6 +208,13 @@
 													<!-- ===== timeline item ===== -->
 													<div class="timeline-item">
 														<div class="circle-dot"></div>
+														<h3 class="timeline-date"><i class="fa fa-calendar"></i> February 2023</h3>
+														<h4 class="timeline-title">React Tutorial and Projects Course</h4>
+														<p class="timeline-text">Has successfully completed the course React Tutorial and Projects Course as taught by John Smilga on Udemy.</p>
+													</div>
+													<!-- ===== timeline item ===== -->
+													<div class="timeline-item">
+														<div class="circle-dot"></div>
 														<h3 class="timeline-date"><i class="fa fa-calendar"></i> January 2023</h3>
 														<h4 class="timeline-title">JavaScript Algorithms and Data Structures</h4>
 														<p class="timeline-text">Has successfully completed the freeCodeCamp.org JavaScript Algorithms and Data Structures Developer Certification, representing approximately 300 hours of coursework.</p>
@@ -287,6 +296,26 @@
 							<div class="languages-item padd-15">
 								<div class="languages-item-inner">
 									<div class="icon">
+										<i class="fa fa-brands fa-sass"></i>
+									</div>
+									<h4>SASS</h4>
+								</div>
+							</div>
+							<!-- ===== Languages item End ====== -->
+							<!-- ===== Languages item Start ====== -->
+							<div class="languages-item padd-15">
+								<div class="languages-item-inner">
+									<div class="icon">
+										<i class="fa fa-sharp fa-regular fa-j"></i>
+									</div>
+									<h4>jQuery</h4>
+								</div>
+							</div>
+							<!-- ===== Languages item End ====== -->
+							<!-- ===== Languages item Start ====== -->
+							<div class="languages-item padd-15">
+								<div class="languages-item-inner">
+									<div class="icon">
 										<i class="fa fa-brands fa-square-js"></i>
 									</div>
 									<h4>JavaScript</h4>
@@ -317,6 +346,16 @@
 							<div class="languages-item padd-15">
 								<div class="languages-item-inner">
 									<div class="icon">
+										<i class="fa fa-sharp fa-solid fa-bolt"></i>
+									</div>
+									<h4>Socket IO</h4>
+								</div>
+							</div>
+							<!-- ===== Languages item End ====== -->
+							<!-- ===== Languages item Start ====== -->
+							<div class="languages-item padd-15">
+								<div class="languages-item-inner">
+									<div class="icon">
 										<i class="fa fa-brands fa-git-alt"></i>
 									</div>
 									<h4>Git</h4>
@@ -340,6 +379,46 @@
 										<i class="fa fa-brands fa-gitlab"></i>
 									</div>
 									<h4>GitLab</h4>
+								</div>
+							</div>
+							<!-- ===== Languages item End ====== -->
+							<!-- ===== Languages item Start ====== -->
+							<div class="languages-item padd-15">
+								<div class="languages-item-inner">
+									<div class="icon">
+										<i class="fa fa-solid fa-terminal"></i>
+									</div>
+									<h4>Command Prompt</h4>
+								</div>
+							</div>
+							<!-- ===== Languages item End ====== -->
+							<!-- ===== Languages item Start ====== -->
+							<div class="languages-item padd-15">
+								<div class="languages-item-inner">
+									<div class="icon">
+										<i class="fa fa-brands fa-chrome"></i>
+									</div>
+									<h4>Chrome DevTools</h4>
+								</div>
+							</div>
+							<!-- ===== Languages item End ====== -->
+							<!-- ===== Languages item Start ====== -->
+							<div class="languages-item padd-15">
+								<div class="languages-item-inner">
+									<div class="icon">
+										<i class="fa fa-regular fa-c"></i>
+									</div>
+									<h4>Canva</h4>
+								</div>
+							</div>
+							<!-- ===== Languages item End ====== -->
+							<!-- ===== Languages item Start ====== -->
+							<div class="languages-item padd-15">
+								<div class="languages-item-inner">
+									<div class="icon">
+										<i class="fa fa-solid fa-leaf"></i>
+									</div>
+									<h4>Leaflet JS</h4>
 								</div>
 							</div>
 							<!-- ===== Languages item End ====== -->
