--- a/success.html
+++ b/success.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div class="messageSuccess">
-			<h1>Message Sent!</h1>
+			<h1>Message sent!</h1>
 			<p>Go back <a href="https://ayreneys.github.io/portfolio-AYS/">HOME</a></p>
 		</div>
 	</body>
